--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@ html, body {
     height: 100%;
   }
   .logo {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-top: 20px;
+    margin: 20px;
+    height:auto;
   }
   img {
+    max-width: 100%;
     width: 80px;
-    border-radius: 100px;
+    min-width: 60px;
+    border-radius: 50%;
+    height:auto;
   }
   #title {
     margin-bottom: 20px;
