--- a/style.css
+++ b/style.css
@@ -9,15 +9,16 @@ html, body {
     align-items: center;
     justify-content: center;
     height: 100%;
+    padding: 20px;
   }
   .logo {
-    margin: 20px;
+    position: flex;
+    margin:10px;
     height:auto;
   }
   img {
     max-width: 100%;
     width: 80px;
-    min-width: 60px;
     border-radius: 50%;
     height:auto;
   }
@@ -28,7 +29,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    height: 100%;
+    height: auto;
     width: 80%;
     
   }
@@ -53,15 +54,19 @@ html, body {
     align-items: stretch;
     margin-top: 10px;
   }
+  .button-container button {
+    height: 60px; /* 设置按钮的高度为 40 像素，可以根据需要进行调整 */
+  }
+
   #inputText,
   #outputText {
     width: 100%;
     height: 100%;
     resize: none;
-    padding-top: 10px;
+    /* padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 10px; */
     box-sizing: border-box;
     border-radius: 12px;
     border: 3px solid #000;
@@ -97,33 +102,63 @@ html, body {
     position: absolute;
     top: 20px;
     right: 20px;
+    
   }
   
   .language-switcher select {
-    padding: 8px;
+    padding: 10px 10px;
     font-size: 16px;
     border-radius: 5px;
-    background-color: #ffffff;
+    background-color: #eeebeb;
     border: none;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    color: #333333;
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+    color: #bebebe;
   }
   
   .language-switcher select:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    cursor: pointer;
+    background-color: #5b5b5b;
   }
   
   .language-switcher select:focus {
     
     outline: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
   }
 
   ::selection {
     background-color: black;
     color: white;
   }
+
+  .navigation {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+
+  }
+  
+  .navigation a {
+    padding: 10px 20px;
+    background-color: #eeebeb;
+    color: #bebebe;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    margin: 0 4px;
+    text-decoration: none;
+  }
+  
+  .navigation a:hover {
+    background-color: #5b5b5b;
+  }
+  
+
   /* 媒体查询：在640宽度以下应用不同的布局 */
   @media (max-width: 640px) {
     .input-container {
@@ -132,6 +167,17 @@ html, body {
     }
     .output-container {
       margin-top: 20px !important;
+      height: auto;
+    }
+    .button-container button {
+      font-size: 12px; /* 设置按钮的高度为 40 像素，可以根据需要进行调整 */
+    }
+    p {
+      font-size: 12px;
+    }
+   
+    img {
+      width: 30px;
       height: auto;
     }
   }
